2008-01-01  Jim Huang  <jserv@openmoko.org>

	* plugin/data/pcmanx.html (function autoConnect): No more fixed font
	family by the means of appconfig.
	Patched by Jason Xia <jasonxh@gmail.com>.

2008-01-01  Jim Huang  <jserv@openmoko.org>

	* plugin/src/plugin.cpp (nsPluginInstance::nsPluginInstance)
	(nsPluginInstance::NewCon),
	plugin/src/plugin.h (nsPluginInstance::m_FontFaceEn):
	Add "load default options from config file" support for
	pcmanx-plugin. It shares the same config file and options with pcmanx
	$HOME/.pcmanx/pcmanx. Also fix the not working FontFace parameter in
	<embed> tags, and add FontFaceEn parameter support in <embed> tags.
	Patched by Jason Xia <jasonxh@gmail.com>.

	* plugin/src/Makefile.am: Link appconfig as well.

2008-01-01  Jim Huang  <jserv@openmoko.org>

	* plugin/src/np_entry.cpp (NP_Shutdown) (NP_Initialize)
	(NP_GetMIMEDescription) (NP_GetValue) (main): Fix the unusable plugin,
	caused by 'visibility' of interfaces.
	Patched by Jason Xia <jasonxh@gmail.com>.

2008-01-01  Jim Huang  <jserv@openmoko.org>

	* src/qqwryseeker/qqwryseeker.c,
	src/qqwryseeker/qqwryseeker.h: New files.
	Helper functions to lookup IP location information contributed by
	Jason Xia <jasonxh@gmail.com>.

	* src/Makefile.am: Build src/qqwryseeker/*.[ch]

	* src/mainframe.h (PushStatus) (PopStatus): New functions for
	Statusbar controlling.

	* src/core/termdata.cpp (CTermData::CTermData) (CTermData::~CTermData)
	(CTermData::UpdateDisplay) (DetectIpPatterns)
	(CTermData::DetectIpAddrs),
	src/view/telnetview.cpp (CTelnetView::CTelnetView)
	(CTelnetView::~CTelnetView) (ipstr2int) (CTelnetView::OnMouseMove):
	Add IP location lookup functionality (on mouse hovering over),
	using the publicly available qqwry.dat database. Not everyone may need
	this feature since qqwry.dat is an IP location database file in
	Simplified Chinese and it is most accurate in areas in mainland Chin.
	Patched by Jason Xia <jasonxh@gmail.com>.

	* src/core/termdata.h,